# Predicao-churn-clientes-bancarios

./: README.md  pyproject.toml
src/api/: test_modelos.py
src/api/MachineLearning/data/: x_test_dataset_churning.csv  y_test_dataset_churning.csv
src/api/MachineLearning/model/: model.ipynb
src/api/MachineLearning/models/: churn_modelling_pipeline_knn.pkl
src/api/MachineLearning/notebooks/: model.ipynb
src/api/model/: avaliador.py  carregador.py  pipeline.py
src/front/: page.py
